--- a/wasm/index.html
+++ b/wasm/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="wasm.js"></script>
+    <script src="wasm_exec.js"></script>
     <!-- <script>
         const go = new Go();
         WebAssembly.instantiateStreaming(fetch("module.wasm"), go.importObject).then((result) => {
